Move-center website 4 page complate

--- a/src/Components/Main/Live Movie/LiveMovie.css
+++ b/src/Components/Main/Live Movie/LiveMovie.css
@@ -1,6 +1,8 @@
 #Live-Movie{
-background-image: url(../../../assets//Images/services_bg.jpg);
-padding-bottom: 40px;
+background-image: url(../../../assets//yoxlama/breadcrumb-bg.webp);
+padding: 40px 0 ;
+background-attachment: fixed;
+
 }
 
 
