--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -9,7 +9,7 @@ background-image: url(../../assets//Images/services_bg.jpg);
 }
 
 .home img{
-width: 500px;
+/* width: 500px; */
 background: transparent;
 }
 
