--- a/src/Components/Contact/ContactForm/ContactForm.css
+++ b/src/Components/Contact/ContactForm/ContactForm.css
@@ -3,7 +3,7 @@
 
 #ContactForm{
 width: 100%;
-background-image: url(../../assets//Images/contact_bg.jpg);
+background-image: url(../../../assets/Images/contact_bg.jpg);
 
 }
 #ContactForm .container{
