--- a/src/Components/Main/HomeCategoryOne/HomeCategoryOne.css
+++ b/src/Components/Main/HomeCategoryOne/HomeCategoryOne.css
@@ -1,15 +1,16 @@
 
 #Home-Category .container{
-    display:block;
-    text-align:center;
+    display:flex;
+    flex-direction: column;
+    text-align:center;}
    
-   }
+
    #Home-Category  {
     padding: 80px 0 90px;
    
    }
  
-   #Home-Category .container span{
+   #Home-Category .container .category-subtitle{
     display: block;
     line-height: 1;
     font-size: 12px;
@@ -82,19 +83,78 @@
    .filter-buttons{
     margin-top: 40px;}
 
-  .movie-grid {
+  .movieGrid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
     margin-top: 20px;
   }
 
   
-  .movie-card {
-    background-color: #222;
+  .movieCard {
     color: white;
     padding: 20px;
     border-radius: 10px;
     text-align: center;
   }
+  .movieCard img{
+   width: 100%;
+  }
+
+  .cart-contents{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .movie-top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 15px 0;
+  }
+  .movie-top h3{
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 0;
+    font-family: 'Poppins', sans-serif;
+    color: #fff;
+    margin-top: 0px;
+    font-style: normal;
+  }
+  .movie-top p{
+    color: #e4d804;
+    font-size: 14px;
+    font-weight: 500;
+    /* margin-left: 50px; */
+  }
+
+ 
+
+
+  .movie-bottom{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  /* quality */
+
+
+
+
+  .movie-bottom p {
+    
+    border: 2px solid #848a85;
+    padding: 5px 10px;
+    line-height: 1;
+    font-weight: 700;
+    font-size: 11px;
+    text-transform: uppercase;
+    color: #f5f4ec;
+  }
+
+  .movie-bottom p:nth-child(1){
+    
    
+  
+    color: #e4d804;
+  }
