--- a/src/Components/Pricing/PriceModel/PriceModel.css
+++ b/src/Components/Pricing/PriceModel/PriceModel.css
@@ -1,5 +1,5 @@
 #Pricing{
-    background-image: url(../../assets/Images/pricing_bg.jpg);
+    background-image: url(../../../assets/Images/pricing_bg.jpg);
     background-position: top center;
      background-size: cover;
      padding: 120px 0 90px;
