--- a/src/Components/Contact/ContactBanner/ContactBanner.css
+++ b/src/Components/Contact/ContactBanner/ContactBanner.css
@@ -1,56 +1,50 @@
-#ContactBanner{
-    background-image: url("../../../assets/Images/Contact-landingBg.jpg");
-    background-position: center center;
-    background-size: cover;
-    height: 100%;
-    position: relative;
-    z-index: 999;
-
+#ContactBanner {
+  background-image: url("../../../assets/Images/ContactImages/Contact-landingBg.jpg");
+  background-position: center center;
+  background-size: cover;
+  height: 100%;
+  position: relative;
+  z-index: 999;
 }
 
-
-#ContactBanner .container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-   
-   
+#ContactBanner .container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.contactBanner-content{
-
-padding: 50px 0;
-position: relative;
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: column;
-text-align: center;
+.contactBanner-content {
+  padding: 50px 0;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
 }
 
-.contactBanner-content h2{
-    color: #F4F4F4;
-    font-family:"Oswald"; 
-    font-size: 4rem;
-    font-weight:500;
-     text-transform: uppercase;
+.contactBanner-content h2 {
+  color: #f4f4f4;
+  font-family: "Oswald";
+  font-size: 4rem;
+  font-weight: 500;
+  text-transform: uppercase;
+}
 
-    }
+.overlay {
+  position: absolute;
+  background-color: #0d0d0d;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  opacity: 0.5;
+  height: 100%;
+  z-index: -1;
+}
+.contactBanner-content p {
+  color: #c7afaf;
+}
 
-    .overlay{
-        position: absolute;
-    background-color:#0D0D0D;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    opacity: 0.5;
-    height: 100%;
-    z-index: -1;
-    }
-    .contactBanner-content p{
-    color:#c7afaf
-    }
-
-    .contactBanner-content a{
-       color:#f6be00
-    }
+.contactBanner-content a {
+  color: #f6be00;
+}
