--- a/src/Components/Main/HomeCategoryOne/HomeCategoryOne.css
+++ b/src/Components/Main/HomeCategoryOne/HomeCategoryOne.css
@@ -1,160 +1,144 @@
+#Home-Category {
+  background-image: url(../../../assets/Images/HomeImages/home-category_bg.jpg);
+}
+#Home-Category .container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
 
-#Home-Category .container{
-    display:flex;
-    flex-direction: column;
-    text-align:center;}
-   
+#Home-Category {
+  padding: 80px 0 90px;
+}
 
-   #Home-Category  {
-    padding: 80px 0 90px;
-   
-   }
- 
-   #Home-Category .container .category-subtitle{
-    display: block;
-    line-height: 1;
-    font-size: 12px;
-    text-transform: uppercase;
-    font-weight: 500;
-    position: relative;
-    margin-bottom: 12px;
-    letter-spacing: 1px;
-    color: #e4d804;
-   
-   }
-   #Home-Category .container h2{
-    margin-bottom: 0;
-    font-size: 36px;
-    font-family: 'Poppins', sans-serif;
-    color: #fff;
-    margin-top: 0px;
-    font-style: normal;
-    font-weight: 700;
-   }
+#Home-Category .container .category-subtitle {
+  display: block;
+  line-height: 1;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 500;
+  position: relative;
+  margin-bottom: 12px;
+  letter-spacing: 1px;
+  color: #e4d804;
+}
+#Home-Category .container h2 {
+  margin-bottom: 0;
+  font-size: 36px;
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+  margin-top: 0px;
+  font-style: normal;
+  font-weight: 700;
+}
 
+#Home-Category .container button {
+  border: none;
+  border-radius: 4px;
+  box-shadow: inset 0px 3px 7px 0px rgba(0, 0, 0, 0.77);
+  background: #0b1110;
+  font-size: 13px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #cdcaca;
+  padding: 17px 25px;
+  position: relative;
+  margin: 0 7.5px 15px;
+}
 
-   #Home-Category .container button{
-    border: none;
-    border-radius: 4px;
-    box-shadow: inset 0px 3px 7px 0px rgba(0, 0, 0, 0.77);
-    background: #0b1110;
-    font-size: 13px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #cdcaca;
-    padding: 17px 25px;
-    position: relative;
-    margin: 0 7.5px 15px;
-   
-   
-   }
+#Home-Category .container button:focus {
+  color: #e4d804;
+}
 
-   #Home-Category .container button:focus  {
-  
-    color: #e4d804;
-   }
+#Home-Category .container button:focus:after {
+  content: "";
+  position: absolute;
+  left: auto;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 2px;
+  height: 16px;
+  transition: 0.3s linear;
+  background: #e4d804;
+}
 
-   #Home-Category .container button:focus:after{
-    content: "";
-    position: absolute;
-    left: auto;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 2px;
-    height: 16px;
-    transition: .3s linear;
-    background: #e4d804;
-   }
-   
-   #Home-Category .container button:focus:before{
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 2px;
-    height: 16px;
-    transition: .3s linear;
-   
-    background: #e4d804;
-   }
-  
-   .filter-buttons{
-    margin-top: 40px;}
+#Home-Category .container button:focus:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 2px;
+  height: 16px;
+  transition: 0.3s linear;
 
-  .movieGrid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
-    margin-top: 20px;
-  }
+  background: #e4d804;
+}
 
-  
-  .movieCard {
-    color: white;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-  }
-  .movieCard img{
-   width: 100%;
-  }
+.filter-buttons {
+  margin-top: 40px;
+}
 
-  .cart-contents{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .movie-top{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 15px 0;
-  }
-  .movie-top h3{
-    font-size: 16px;
-    font-weight: 600;
-    margin-bottom: 0;
-    font-family: 'Poppins', sans-serif;
-    color: #fff;
-    margin-top: 0px;
-    font-style: normal;
-  }
-  .movie-top p{
-    color: #e4d804;
-    font-size: 14px;
-    font-weight: 500;
-    /* margin-left: 50px; */
-  }
+.movieGrid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  margin-top: 20px;
+}
 
- 
+.movieCard {
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+}
+.movieCard img {
+  width: 100%;
+}
 
+.cart-contents {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.movie-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 15px 0;
+}
+.movie-top h3 {
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 0;
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+  margin-top: 0px;
+  font-style: normal;
+}
+.movie-top p {
+  color: #e4d804;
+  font-size: 14px;
+  font-weight: 500;
+}
 
-  .movie-bottom{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  /* quality */
+.movie-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
+.movie-bottom p {
+  border: 2px solid #848a85;
+  padding: 5px 10px;
+  line-height: 1;
+  font-weight: 700;
+  font-size: 11px;
+  text-transform: uppercase;
+  color: #f5f4ec;
+}
 
-
-
-  .movie-bottom p {
-    
-    border: 2px solid #848a85;
-    padding: 5px 10px;
-    line-height: 1;
-    font-weight: 700;
-    font-size: 11px;
-    text-transform: uppercase;
-    color: #f5f4ec;
-  }
-
-  .movie-bottom p:nth-child(1){
-    
-   
-  
-    color: #e4d804;
-  }
+.movie-bottom p:nth-child(1) {
+  color: #e4d804;
+}
