--- a/src/Components/Main/Our Services/OurServices.css
+++ b/src/Components/Main/Our Services/OurServices.css
@@ -1,150 +1,115 @@
-
-/* Our-services css start */
-
-#Our-Services{
+#Our-Services {
   background-color: slategrey;
-background-image: url("../../../assets/yoxlama/breadcrumb-bg.webp");
-background-attachment: fixed;
-background-position: center;
-    background-size: cover;
-    padding: 120px 0;}
-
-
-
-.our-Services-left{
-width: 50%;
-
+  background-image: url("../../../assets/Images/HomeImages/Live-Services-bg.webp");
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  padding: 120px 0;
 }
 
-.our-Services-left img{
-    max-width: 100%;
-  
-}
-.our-Services-right{
-    width: 36%;
-
+.our-Services-left {
+  width: 50%;
 }
 
-.service-card:nth-last-child(2){
-    padding-bottom: 25px;
-    margin-bottom: 25px;
-    border-bottom: 1px dashed #38373c;
-
-    }
-
-
-
-.our-Services-right span{
-    padding-left: 53px;
-    color: #e4e2e2;
-    display: block;
-    line-height: 1;
-    font-size: 12px;
-    text-transform: uppercase;
-    font-weight: 500;
-    position: relative;
-    margin-bottom: 12px;
-    letter-spacing: 1px;
-
+.our-Services-left img {
+  max-width: 100%;
+}
+.our-Services-right {
+  width: 36%;
 }
 
-.our-Services-right span::before{
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 5px;
-    width: 40px;
-    height: 3px;
-    background-color: yellow;
-
+.service-card:nth-last-child(2) {
+  padding-bottom: 25px;
+  margin-bottom: 25px;
+  border-bottom: 1px dashed #38373c;
 }
 
-
-
-
-.our-Services-right h2{
-    margin-bottom: 0;
-    font-size: 36px;
-    font-family: 'Poppins', sans-serif;
-    color: #fff;
-    margin-top: 0px;
-    font-style: normal;
-    font-weight: 700;
-
+.our-Services-right span {
+  padding-left: 53px;
+  color: #e4e2e2;
+  display: block;
+  line-height: 1;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 500;
+  position: relative;
+  margin-bottom: 12px;
+  letter-spacing: 1px;
 }
 
-/* .our-Services-right h2:hover{
-color: rgb(0, 217, 255);
-
-} */
-
-.our-Services-right p{
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 26px;
-    color: #bcbcbc;
-    margin-bottom: 45px;
+.our-Services-right span::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 5px;
+  width: 40px;
+  height: 3px;
+  background-color: yellow;
 }
 
-
-.service-card{
-display: flex;
-
-align-items: center;
+.our-Services-right h2 {
+  margin-bottom: 0;
+  font-size: 36px;
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+  margin-top: 0px;
+  font-style: normal;
+  font-weight: 700;
 }
 
-
-
-.service-card-icon{
-    width: 95px;
-    height: 95px;
-    line-height: 105px;
-    text-align: center;
-    border: 1px dashed #e4d804;
-    border-radius: 50%;
-    flex: 0 0 95px;
-    position: relative;
-    font-size: 38px;
-    color: #fff;
-    margin-right: 20px;
-    z-index: 1;
+.our-Services-right p {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 26px;
+  color: #bcbcbc;
+  margin-bottom: 45px;
 }
 
+.service-card {
+  display: flex;
 
-.service-card-icon:hover{
- 
-   background-color: #e4d804;
- 
+  align-items: center;
 }
 
-.service-card-info{
-    display: flex;
- flex-direction: column;
-   
-    justify-content: center;
+.service-card-icon {
+  width: 95px;
+  height: 95px;
+  line-height: 105px;
+  text-align: center;
+  border: 1px dashed #e4d804;
+  border-radius: 50%;
+  flex: 0 0 95px;
+  position: relative;
+  font-size: 38px;
+  color: #fff;
+  margin-right: 20px;
+  z-index: 1;
 }
 
-
-.service-card-info h5{
-    font-size: 18px;
-    margin-bottom: 10px;
-
-    margin-bottom: 0;
-
-    font-family: 'Poppins', sans-serif;
-    color: #fff;
-    margin-top: 0px;
-    font-style: normal;
-    font-weight: 700;
-
-
-
+.service-card-icon:hover {
+  background-color: #e4d804;
 }
 
-.service-card-info p{
-    margin-bottom: 0;
+.service-card-info {
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
 }
 
+.service-card-info h5 {
+  font-size: 18px;
+  margin-bottom: 10px;
 
+  margin-bottom: 0;
 
-/* Our-services css end */
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+  margin-top: 0px;
+  font-style: normal;
+  font-weight: 700;
+}
+
+.service-card-info p {
+  margin-bottom: 0;
+}
