--- a/src/Components/Movie/MovieBanner/MovieBanner.css
+++ b/src/Components/Movie/MovieBanner/MovieBanner.css
@@ -22,7 +22,6 @@
   height: 250px !important;
 }
 
-/* Yeni content stil qaydaları */
 .slide-content {
   position: absolute;
   top: 25%;
@@ -34,19 +33,19 @@
 }
 
 .slide-content h2 {
-  color: #F4F4F4;
-  font-family:"Oswald"; 
+  color: #f4f4f4;
+  font-family: "Oswald";
   font-size: 4rem;
-  font-weight:500;
-   text-transform: uppercase;
+  font-weight: 500;
+  text-transform: uppercase;
 }
 
 .slide-content p {
-  color:#c7afaf
+  color: #c7afaf;
 }
 
 .slide-content a {
-  color:#f6be00
+  color: #f6be00;
 }
 
 .swiper-slide::before {
@@ -56,6 +55,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Dark overlay */
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
 }
