--- a/src/Components/Movie/MovieSearch/MovieSearch.css
+++ b/src/Components/Movie/MovieSearch/MovieSearch.css
@@ -1,6 +1,6 @@
 #Movie-Search {
   text-align: center;
-  background-color:#121318;
+  background-color: #121318;
   padding: 70px 0;
 }
 
@@ -10,12 +10,12 @@
   letter-spacing: 1.3px;
   color: white;
   margin-bottom: 0;
-    font-size: 36px;
-    font-family: 'Poppins', sans-serif;
-    color: #fff;
-    margin-top: 0px;
-    font-style: normal;
-    font-weight: 700;
+  font-size: 36px;
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+  margin-top: 0px;
+  font-style: normal;
+  font-weight: 700;
 }
 
 #Movie-Search input {
@@ -25,7 +25,6 @@
   margin-bottom: 30px;
   border-radius: 10px;
   border: 0.3px solid black;
-  /* background-color: #363062; */
   background-color: #6f6e72;
   color: white;
   border: none;
