--- a/src/Components/TvShow/TvShowPagination/Pagination.css
+++ b/src/Components/TvShow/TvShowPagination/Pagination.css
@@ -1,8 +1,6 @@
-
-.tv-contents{
-
+.tv-contents {
   text-align: center !important;
-   background-image:url(../../../assets/Images/TvShow--bg.png) ;
+  background-image: url(../../../assets/Images/TvShowImages/TvShow--bg.png);
   background-color: #100e17;
   padding: 70px 0 0;
 }
@@ -16,99 +14,82 @@
   position: relative;
   margin-bottom: 12px;
   letter-spacing: 1px;
-  color:#e4d804
+  color: #e4d804;
 }
 
-.tv-contents h2{
+.tv-contents h2 {
   margin-bottom: 0;
   font-size: 36px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #fff;
   margin-top: 0px;
   font-style: normal;
   font-weight: 700;
 }
 
-
-
-
-
-
-
-
-
 .movies-grid {
-  background-image:url(../../../assets/Images/TvShow--bg.png);
-background-color: #100e17;
-background-repeat: no-repeat;
-padding: 40px 0 90px;
+  background-image: url(../../../assets/Images/TvShowImages/TvShow--bg.png);
+  background-color: #100e17;
+  background-repeat: no-repeat;
+  padding: 40px 0 90px;
+}
 
-  }
+.movies-grid .container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
 
-  .movies-grid .container{
+.movie-card {
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+}
 
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
-  
-  }
-  
-  .movie-card {
+.movie-card img {
+  width: 100%;
+}
 
+.pagination {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  background-image: url(../../../assets/Images/TvShow--bg.png);
+  background-color: #100e17;
+}
 
-    color: white;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    /* background-color: red; */
-  }
+.page-item {
+  margin: 0 5px;
+}
 
-  .movie-card img{
+.page-link {
+  padding: 10px 15px;
+  background-color: #333;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
 
- width: 100%;
- 
-  }
-  
-  .pagination {
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-    background-image:url(../../../assets/Images/TvShow--bg.png);
-    background-color: #100e17;
-  }
-  
-  .page-item {
-    margin: 0 5px;
-  }
-  
-  .page-link {
-    padding: 10px 15px;
-    background-color: #333;
-    color: white;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .page-item.active .page-link {
-    background-color: yellow;
-    color: black;
-  }
+.page-item.active .page-link {
+  background-color: yellow;
+  color: black;
+}
 
-  .cart-contents{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .movie-top{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 15px;
-  }
+.cart-contents {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.movie-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
 
-  .movie-bottom{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
+.movie-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
